--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,11 @@ name: main
 on:
   push:
     branches:
-      - [ main ]
+      - main
 
   pull_request:
     branches:
-      - [ main ]
+      - main
 
 
 jobs: 
