--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test TimelyTastes.Tests/TimelyTastes.Tests.csproj --verbosity diagnostic
+      run: dotnet test TimelyTastes.Tests/TimelyTastes.Tests.csproj --verbosity normal
